--- a/msdlt_spine.html
+++ b/msdlt_spine.html
@@ -257,6 +257,9 @@ SW1A 2BQ</p>
 </div>
 <div class="col-sm-6 center-contents">
 <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+  <b>Note: This page is experimental work to develop interactive visualisations of the statistics publishied 
+    <a href = https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above>here</a>,
+    where you can find more up-to-date data. This page is not itself a statistical release. </b>  <br/>
 <h1 id="uk-property-transaction-statistics"><strong>UK Property <br/> Transaction <br/> Statistics</strong></h1>
 <div class="figure">
 <img src="static/img/ns.svg" />
