--- a/msdlt_spine.html
+++ b/msdlt_spine.html
@@ -275,6 +275,9 @@ April 2017
 <div class="page-break">
 
 </div>
+    <b>Note: This page is experimental work to develop interactive visualisations of the statistics publishied 
+    <a href = https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above>here</a>,
+    where you can find more up-to-date data. This page is not itself a statistical release. </b>  <br/>
 <h1 id="section-1-statistics">Section 1: Statistics</h1>
 <h2 id="guidance-on-the-statistics">Guidance on the statistics</h2>
 <p>This publication presents monthly estimates of the number of residential and non-residential property transactions in the UK and its constituent countries. The figures are based on HMRC’s Stamp Duty Land Tax (SDLT) and the Scottish Administration’s Land and Buildings Transactions Tax (LBTT) databases. LBTT data was introduced from April 2015 so the figures from this date should be treated with particular caution. More information about data sources, quality and methodology can be found on page 7.</p>
