--- a/msdlt_spine.html
+++ b/msdlt_spine.html
@@ -257,9 +257,6 @@ SW1A 2BQ</p>
 </div>
 <div class="col-sm-6 center-contents">
 <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-  <b>Note: This page is experimental work to develop interactive visualisations of the statistics publishied 
-    <a href = https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above>here</a>,
-    where you can find more up-to-date data. This page is not itself a statistical release. </b>  <br/>
 <h1 id="uk-property-transaction-statistics"><strong>UK Property <br/> Transaction <br/> Statistics</strong></h1>
 <div class="figure">
 <img src="static/img/ns.svg" />
@@ -275,10 +272,10 @@ April 2017
 <div class="page-break">
 
 </div>
-    <b>Note: This page is experimental work to develop interactive visualisations of the statistics publishied 
-    <a href = https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above>here</a>,
-    where you can find more up-to-date data. This page is not itself a statistical release. </b>  <br/>
 <h1 id="section-1-statistics">Section 1: Statistics</h1>
+     <strong>Note: This page is experimental work to develop interactive visualisations of the statistics publishied 
+    <a href="https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above">here</a>,
+    where you can find more up-to-date data. This page is not itself a statistical release. </strong>  <br/>
 <h2 id="guidance-on-the-statistics">Guidance on the statistics</h2>
 <p>This publication presents monthly estimates of the number of residential and non-residential property transactions in the UK and its constituent countries. The figures are based on HMRC’s Stamp Duty Land Tax (SDLT) and the Scottish Administration’s Land and Buildings Transactions Tax (LBTT) databases. LBTT data was introduced from April 2015 so the figures from this date should be treated with particular caution. More information about data sources, quality and methodology can be found on page 7.</p>
 <p>These statistics are generally used by analysts, academics and policy makers to examine movements and trends in the UK property market. They are best used in conjunction with other housing market indicators, for example HMRC’s Quarterly Stamp Duty Statistics Bulletin. Note that the statistics in the Quarterly Stamp Duty Statistics Bulletin are based on the SDLT certification date, whereas this bulletin reports transactions on the basis of completion date. As these dates can be up to 30 days apart, the number of transactions will differ between the two publications. Links to related statistics can be found in the ‘Related Statistics’ section on page 7.</p>
