fixed published typo

--- a/msdlt_spine.html
+++ b/msdlt_spine.html
@@ -273,7 +273,7 @@ April 2017
 
 </div>
 <h1 id="section-1-statistics">Section 1: Statistics</h1>
-     <strong>Note: This page is experimental work to develop interactive visualisations of the statistics publishied 
+     <strong>Note: This page is experimental work to develop interactive visualisations of the statistics published 
     <a href="https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above">here</a>,
     where you can find more up-to-date data. This page is not itself a statistical release. </strong>  <br/>
 <h2 id="guidance-on-the-statistics">Guidance on the statistics</h2>
